objects/SBQQ__Quote__c.object
<CustomObject>
    <fields>
        <fullName>SBQQ__TargetCustomerAmount__c</fullName>
        <description>Customer amount to be targeted in calculating additional discounts.</description>
        <inlineHelpText>Enter desired customer amount to automatically calculate additional discount on discountable line items.</inlineHelpText>
        <label>Target Customer Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__TotalCustomerDiscountAmount__c</fullName>
        <description>Total amount of customer discount. This includes any contracted, volume, compound rate and additional discounts.</description>
        <formula>SBQQ__ListAmount__c - SBQQ__CustomerAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total amount of customer discount. This includes any contracted, volume, compound rate and additional discounts.</inlineHelpText>
        <label>Total Customer Disc. Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__Type__c</fullName>
        <description>Indicates the type of quote.</description>
        <inlineHelpText>Indicates the type of quote.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                    <default>true</default>
                    <label>Quote</label>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
                <value>
                    <fullName>Re-Quote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Uncalculated__c</fullName>
        <description>If selected, the quote hasn’t been calculated.</description>
        <formula>( NOT( ISNULL( SBQQ__LastCalculatedOn__c ) ) &amp;&amp; SBQQ__LastSavedOn__c &gt; SBQQ__LastCalculatedOn__c ) || ( NOT ( ISNULL ( SBQQ__LastSavedOn__c) ) &amp;&amp; ISNULL ( SBQQ__LastCalculatedOn__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If selected, the quote hasn’t yet been calculated.</inlineHelpText>
        <label>Uncalculated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Unopened__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the quote has ever been opened to determine if it is a new quote.</description>
        <inlineHelpText>Indicates whether the quote has ever been opened to determine if it is a new quote.</inlineHelpText>
        <label>Unopened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__WatermarkShown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the watermark in the Quote Document is displayed.</description>
        <inlineHelpText>Select the checkbox to display watermark in the Quote Document.</inlineHelpText>
        <label>Watermark Shown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Segmented_Avg_Customer_Disc__c</fullName>
        <formula>IF( Segmented_List_Amount__c = 0, 0, ((Segmented_List_Amount__c -  Segmented_Customer_Amount__c) / Segmented_List_Amount__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segmented Avg.Customer Disc.(%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Segmented_Customer_Amount__c</fullName>
        <label>Segmented Customer Amount</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__CustomerTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Non_Segmented_or_Non_Subscription__c</field>
            <operation>equals</operation>
            <value>Segmented Item</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__Optional__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Segmented_List_Amount__c</fullName>
        <label>Segmented List Amount</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__ListTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__Optional__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Non_Segmented_or_Non_Subscription__c</field>
            <operation>equals</operation>
            <value>Segmented Item</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Services_ACV__c</fullName>
        <label>Services ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Signature_Email_Message__c</fullName>
        <description>This was added to automate the conga sign process.</description>
        <inlineHelpText>The text that is added into this field is used in the body of the signature request email which will be sent to our customer.  You can leave this blank and the email will have some default language.</inlineHelpText>
        <label>Signature Email Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Email_Subject__c</fullName>
        <description>This was added to automate the conga sign process so we don&apos;t have to ask questions.</description>
        <inlineHelpText>what ever text is in this field is used in the email message from Conga with the Conga Sign Request.  If left empty a default message is used.  You can use this field to personalize the subject of the email message sent with the signature request.</inlineHelpText>
        <label>Signature Email Subject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Notes_and_Instructions__c</fullName>
        <description>Area designeted for Special Notes and Instructions</description>
        <label>Special Notes and Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SubmittedDate__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sum_of_Percent_of_Total_List_items__c</fullName>
        <description>For background calculations, the sum of single-year (List, non-prorated) prices of Percent of Total items, populated by a Price Rule and Summary Variable. For use in calculating 1st year ACV.</description>
        <label>Sum of Percent of Total List items</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TCV__c</fullName>
        <label>TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>T_C_S_is_Blank__c</fullName>
        <defaultValue>&quot;True&quot;</defaultValue>
        <label>T&amp;C&apos;S is Blank</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Cs__c</fullName>
        <label>T&amp;Cs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <label>Template</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Discount and List Price Template</fullName>
                </value>
                <value>
                    <fullName>Standard Template</fullName>
                    <default>true</default>
                    <label>Standard Template</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_One_Time_Product_Price__c</fullName>
        <description>This field used for Total One Time Discount percent calculation on opportunity</description>
        <label>Total One Time Product Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Renewable_Product_Price__c</fullName>
        <description>This filed used in calculation of Total Renewable Discount percent on Opportunity</description>
        <label>Total Renewable Product Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Uplift__c</fullName>
        <description>This is a field for uplift appy</description>
        <label>Uplift</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VAT_Number__c</fullName>
        <label>VAT Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT_Required_Text__c</fullName>
        <label>VAT Required</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Value Added Tax number required for invoicing purposes</inlineHelpText>
        <label>VAT Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1st_YR_ARR__c</fullName>
        <label>1st YR ARR</label>
        <summarizedField>SBQQ__QuoteLine__c.ARR__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__SegmentIndex__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X1st_Year_ACV_EC2__c</fullName>
        <formula>X1st_Year_Segmented_ACV__c +  Non_Segmented_ACV__c</formula>
        <label>1st Year ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1st_Year_ACV_EC__c</fullName>
        <label>1st Year ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1st_Year_ACV__c</fullName>
        <formula>X1st_Year_ACV_EC2__c + One_Time_ACV__c</formula>
        <inlineHelpText>Includes licensing &amp; services in first year</inlineHelpText>
        <label>1st Year Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1st_Year_ACV_for_background_calculation__c</fullName>
        <description>a field to hold a one time product ACV in a summary with 1st Year AVC
to be populated by Price Rules + Summary variables and not visible on layouts</description>
        <label>Sum of Segment Index 1 items</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1st_Year_ACV_only__c</fullName>
        <description>The sum of Segment 1 (first year) subscription License products + the sum of List (non-prorated) Percent of Total products.</description>
        <formula>Sum_of_Percent_of_Total_List_items__c + X1st_Year_ACV_for_background_calculation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The sum of Segment 1 (first year) subscription License products + the sum of List (non-prorated) Percent of Total products.</inlineHelpText>
        <label>1st Year ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1st_Year_Segmented_ACV__c</fullName>
        <label>1st Year Segmented ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2nd_Year_ACV__c</fullName>
        <description>a field to hold a 2nd Year ACV populated by Price Rules + Summary variables</description>
        <label>2nd Year ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3rd_Year_ACV__c</fullName>
        <description>a field to hold a 3rd Year ACV populated by Price Rules + Summary variables</description>
        <label>3rd Year ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X4th_Year_ACV__c</fullName>
        <description>a field to hold a 4th Year ACV populated by Price Rules + Summary variables</description>
        <label>4th Year ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X5th_Year_ACV__c</fullName>
        <description>a field to hold a 1st Year ACV populated by Price Rules + Summary variables</description>
        <label>5th Year ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Quote</label>
    <listViews>
        <fullName>Deal_Desk_Approval_Quote</fullName>
        <filterScope>Queue</filterScope>
        <label>Deal Desk Approval</label>
        <queue>Deal_Desk_Approval</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Pending_Approvals</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__Account__c</columns>
        <columns>Approval_Manager__c</columns>
        <columns>SBQQ__SalesRep__c</columns>
        <columns>SBQQ__DaysQuoteOpen__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Pending Approvals</label>
    </listViews>
    <listViews>
        <fullName>My_Quotes</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__MasterContract__c</columns>
        <columns>SBQQ__Opportunity2__c</columns>
        <columns>SBQQ__Type__c</columns>
        <columns>SBQQ__Primary__c</columns>
        <columns>SBQQ__LineItemsGrouped__c</columns>
        <columns>SBQQ__NetAmount__c</columns>
        <columns>SBQQ__Status__c</columns>
        <columns>SBQQ__ExpirationDate__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>X1st_Year_ACV_EC__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <listViews>
        <fullName>New_Business_Quotes</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__MasterContract__c</columns>
        <columns>SBQQ__Opportunity2__c</columns>
        <columns>SBQQ__Type__c</columns>
        <columns>SBQQ__Primary__c</columns>
        <columns>SBQQ__LineItemsGrouped__c</columns>
        <columns>SBQQ__NetAmount__c</columns>
        <columns>SBQQ__Status__c</columns>
        <columns>SBQQ__ExpirationDate__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SBQQ__Type__c</field>
            <operation>equals</operation>
            <value>Quote</value>
        </filters>
        <label>New Business Quotes</label>
    </listViews>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__MasterContract__c</columns>
        <columns>SBQQ__Opportunity2__c</columns>
        <columns>SBQQ__Type__c</columns>
        <columns>SBQQ__Status__c</columns>
        <columns>SBQQ__Primary__c</columns>
        <columns>SBQQ__NetAmount__c</columns>
        <columns>SBQQ__ExpirationDate__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SBQQ__ExpirationDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>SBQQ__Status__c</field>
            <operation>equals</operation>
            <value>In Review,Approved,Denied,Presented</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Q-{00000}</displayFormat>
        <label>Quote Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <recordTypes>
        <fullName>Approved</fullName>
        <active>false</active>
        <label>Approved</label>
    </recordTypes>
    <recordTypes>
        <fullName>Draft</fullName>
        <active>true</active>
        <label>Draft</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ClonedQuoteNonPrimaryandDraftStatus</fullName>
        <active>true</active>
        <description>When a Quote is cloned it should have Primary checkbox unchecked and Draft status.</description>
        <errorConditionFormula>ISCLONE()  &amp;&amp;  (SBQQ__Primary__c == true  ||  TEXT( SBQQ__Status__c)  &lt;&gt;  &apos;Draft&apos; )</errorConditionFormula>
        <errorMessage>The Quote should not be Primary and status should be Draft.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Master_Contract_for_Add_ons</fullName>
        <active>false</active>
        <description>Master Contract is only required for Add-On opportunities.</description>
        <errorConditionFormula>ISPICKVAL(SBQQ__Opportunity2__r.Type, &apos;Add-on&apos;)
&amp;&amp;
ISPICKVAL(SBQQ__Opportunity2__r.Type, &apos;New Business Add-on&apos;)
&amp;&amp;
ISBLANK(SBQQ__MasterContract__c)</errorConditionFormula>
        <errorMessage>Master Contract is required for Add-On opportunities.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NoFieldUpdateAfterQuoteApproved</fullName>
        <active>true</active>
        <description>This validation rule will fire when User try to update few fields once Quote has been approved.</description>
        <errorConditionFormula>IF($Setup.APO_Setting__c.Quote_Cant_Update_Fields_After_Approve__c=false, AND(ISPICKVAL(SBQQ__Status__c, &apos;Approved&apos;), $Profile.Name &lt;&gt; &apos;System Administrator&apos;, OR( ISCHANGED(SBQQ__Account__c),  ISCHANGED(SBQQ__BillingFrequency__c), ISCHANGED(AVA_SFCPQ__Quote_AutomateTaxCalculation__c), ISCHANGED(Current_License_TCV__c), ISCHANGED(SBQQ__EndDate__c), ISCHANGED(SBQQ__ExpirationDate__c), ISCHANGED(External_ID__c), ISCHANGED(SBQQ__FirstSegmentTermEndDate__c), ISCHANGED(SBQQ__Opportunity2__c), ISCHANGED(OwnerId), ISCHANGED(Payment_Method__c), ISCHANGED(SBQQ__PaymentTerms__c), ISCHANGED(PO_Numbers__c), ISCHANGED(PO_Required__c), ISCHANGED(Primary_Document_Title__c), ISCHANGED(Name), ISCHANGED(SBQQ__RenewalTerm__c), ISCHANGED(SBQQ__RenewalUpliftRate__c), ISCHANGED(AVA_SFCPQ__SalesTaxAmount__c), ISCHANGED(Special_Notes_and_Instructions__c), ISCHANGED(SBQQ__StartDate__c), ISCHANGED(SBQQ__Status__c), ISCHANGED(SubmittedDate__c), ISCHANGED(Sum_of_Percent_of_Total_List_items__c), ISCHANGED(T_Cs__c),ISCHANGED(SBQQ__Type__c), ISCHANGED(Uplift__c))),false)</errorConditionFormula>
        <errorMessage>You do not have permission to update the fields on approved quote.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_master_contract_for_non_add_ons</fullName>
        <active>false</active>
        <description>Master Contract is only required for Add-On opportunities.</description>
        <errorConditionFormula>NOT(ISPICKVAL(SBQQ__Opportunity2__r.Type, &apos;Add-on&apos;)) 
&amp;&amp; 
NOT(ISBLANK(SBQQ__MasterContract__c))</errorConditionFormula>
        <errorMessage>Master Contract is only required for Add-On opportunities.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__End_Date_Before_Start_Date</fullName>
        <active>true</active>
        <description>Validates End Date comes after the Start Date</description>
        <errorConditionFormula>IF( AND( NOT(ISNULL(SBQQ__EndDate__c)), SBQQ__EndDate__c &lt; SBQQ__StartDate__c), TRUE, null)</errorConditionFormula>
        <errorMessage>The End Date must come after the Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Invalid_First_Segment_Term_End_Date</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(ISNULL(SBQQ__FirstSegmentTermEndDate__c)) &amp;&amp; NOT(ISNULL(SBQQ__StartDate__c)) &amp;&amp; (NOT(ISNULL(SBQQ__SubscriptionTerm__c)) || NOT(ISNULL(SBQQ__EndDate__c))) &amp;&amp;
            (SBQQ__FirstSegmentTermEndDate__c &lt; SBQQ__StartDate__c || IF(NOT(ISNULL(SBQQ__EndDate__c)),SBQQ__FirstSegmentTermEndDate__c &gt; SBQQ__EndDate__c, IF(LOWER($Setup.SBQQ__GeneralSettings__c.SBQQ__SubscriptionTermUnit__c)=&apos;day&apos;, SBQQ__FirstSegmentTermEndDate__c &gt; SBQQ__StartDate__c + SBQQ__SubscriptionTerm__c-1, SBQQ__FirstSegmentTermEndDate__c &gt; SBQQ__StartDate__c + (SBQQ__SubscriptionTerm__c * 30.4375))))</errorConditionFormula>
        <errorDisplayField>SBQQ__FirstSegmentTermEndDate__c</errorDisplayField>
        <errorMessage>First Segment Term End Date must fall between Quote Start Date and Quote End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Invalid_Subscription_Term</fullName>
        <active>true</active>
        <description>Validates that subscription term is positive</description>
        <errorConditionFormula>IF( AND( NOT(ISNULL(SBQQ__SubscriptionTerm__c)), SBQQ__SubscriptionTerm__c &lt;= 0), TRUE, null)</errorConditionFormula>
        <errorMessage>The subscription term must be a positive number.</errorMessage>
    </validationRules>
</CustomObject>